--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,12 @@ dependencies:
     git:
       url: https://github.com/GitHubStuff/flutter_packages.git
       path: flutter_extras
+  popover_datetime_picker:
+    git:
+      url: https://github.com/GitHubStuff/popover_datetime_picker.git
+  sqlite_explorer:
+    git:
+      url: https://github.com/GitHubStuff/sqlite_explorer.git
   theme_manager:
     git:
       url: https://github.com/GitHubStuff/theme_manager.git
@@ -23,9 +29,6 @@ dependencies:
     git:
       url: https://github.com/GitHubStuff/flutter_packages.git
       path: time_toggle_buttons
-  popover_datetime_picker:
-    git:
-      url: https://github.com/GitHubStuff/popover_datetime_picker.git
   cupertino_icons: ^1.0.3
   flutter_bloc: ^7.0.1
   flutter_modular: ^3.3.0
