--- a/ios/Runner/Info-Release.plist
+++ b/ios/Runner/Info-Release.plist
@@ -2,22 +2,25 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+    <dict>
     <key>LSApplicationQueriesSchemes</key>
-      <array>
-          <string>dbapi-8-emm</string>
-          <string>dbapi-2</string>
-      </array>
+	  <array>
+		  <string>dbapi-8-emm</string>
+		  <string>dbapi-2</string>
+	  </array>
     <key>CFBundleURLTypes</key>
-      <array>
-        <dict>
-          <key>CFBundleURLSchemes</key>
-          <array>
-            <string>db-jdngwadvorh5zue</string>
-          </array>
-          <key>CFBundleURLName</key>
-          <string></string>
-        </dict>
-      </array>
+	<array>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLName</key>
+			<string></string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>db-jdngwadvorh5zue</string>
+			</array>
+		</dict>
+	</array>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleExecutable</key>
