--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,10 @@ dependencies:
     git:
       url: https://github.com/GitHubStuff/flutter_packages.git
       path: date_time_intervals
+  animation_checkmark:
+    git:
+      url: https://github.com/GitHubStuff/flutter_packages.git
+      path: animation_checkmark
   flutter_extras:
     git:
       url: https://github.com/GitHubStuff/flutter_packages.git
